[package]
name = "comp"
version = "0.2.1"
authors = ["goandylok"]
license = "MIT/Apache-2.0"

description = "Pure-macro Do notation and List-comprehension for Option, Result and Iterator."
repository = "https://github.com/goandylok/comp-rs"
homepage = "https://github.com/goandylok/comp-rs"
documentation = "https://docs.rs/comp/"

keywords = ["macro", "hado", "do", "mdo", "notation"]
